Swagger - Spell correction
